Fix about overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,7 +100,7 @@ h3 {
   /* have to change - height */
   height: 90vh;
   /* min-height: auto; */
-  width: 85vw;
+  width: 89vw;
   max-width: 1100px;
   margin: 0 auto 1.8rem;
   /* glass effect */
